fixed tests, added reports and balance info
